registration commit on MINE

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <li><a href="#about">ABOUT</a></li>
           <li><a href="#links">CONTACT US</a></li>
           <li onclick="openCourseTemplate()"><a href="">COURSES</a></li>
-          <li><a href="#">STUDENT SECTION</a></li>
+          <li onclick="openRegistration()"><a href="#">REGISTRATION</a></li>
           
         </ul>
       </div>
@@ -44,7 +44,7 @@
         <a href="#about">About</a>
         <a href="#links">Contact Us</a>
         <a  onclick="openCourseTemplate()">Courses</a>
-        <a href="#">Student_Section</a>
+        <a href="student_registration.html">REGISTRATION</a>
       </div>
       
       <div id="main">
@@ -59,7 +59,7 @@
          <h4>Discover a world of academic excellence and personal growth at Aligarian's Visionary Classes.
 
          </h4>
-         <button class="btn">EXPLORE COURSES</button>
+         <button class="btn" onclick="openRegistration()">REGISTRATION</button>
 
     </div>
     <div class="registration"><pre>Registration   starting   from  1 JAN  to  10 JAN</pre></div>
@@ -365,7 +365,7 @@ Welcome to <span>Aligarian's Visionary Classes</span>, where education meets exc
         <li><a href="#about">ABOUT</a></li>
         <li><a href="#links">CONTACT US</a></li>
         <li><a href="#courses">COURSES</a></li>
-        <li><a href="">STUDENT SECTION</a></li>
+        <li><a href="">REGISTRATION</a></li>
       </ul></div>
       <div class="last_bottom">
         <div class="loc">
