--- a/student_registration.html
+++ b/student_registration.html
@@ -63,6 +63,34 @@
     main h1 {
       font-family: sans-serif;
     }
+    @media screen and (max-width: 512px) {
+      main {
+        height: 460px;
+        width: 300px;
+        border: 2px solid black;
+        justify-content: space-evenly;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: white;
+        text-align: center;
+        padding: 2px 2px 2px 2px;
+        border-radius: 10px;
+      }
+      label {
+        font-size: 16px;
+        font-weight: 540;
+        font-family: sans-serif;
+        align-items: center;
+      }
+      main h1 {
+        font-family: sans-serif;
+        font-size: 20px;
+      }
+      input {
+        font-size: 17px;
+      }
+    }
   </style>
   <body>
     <form action="" name="submit-to-google-sheet">
