Thank you for your registration Commit

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ Welcome to <span>Aligarian's Visionary Classes</span>, where education meets exc
         </div>
         <button class="btn1" onclick="scrollToTop()">BACK to HOME</button>
         <div id="links">
-          <div class="img1" onclick="openLink()"><img src="Images/insta_image.jpg" alt="" srcset="" ></div>
+          <div class="img1" onclick="openInsta()"><img src="Images/insta_image.jpg" alt="" srcset="" ></div>
           <!-- <div class="img2"><img src="Images/twitter_image.png" alt="" srcset=""></div> -->
           <div class="img3" onclick="openEmail()"><img src="Images/Email_image.jpeg" alt="" srcset="">
           <br>
