The Last Commit

--- a/index.html
+++ b/index.html
@@ -42,7 +42,16 @@
 
       </ul>
     </div>
-    
+    <!-- responsive -->
+    <!-- <div id="responsive">
+  <ul>
+    <li><a href="#">HOME</a></li>
+    <li><a href="#about">ABOUT</a></li>
+    <li><a href="#links">CONTACT US</a></li>
+    <li onclick="openCourseTemplate()"><a href="">COURSES</a></li>
+    <li><a href="#">STUDENT SECTION</a></li>
+  </ul>
+</div> -->
     <div id="mySidenav" class="sidenav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()" style="color: white;">&times;</a>
       <a href="">
@@ -59,9 +68,8 @@
       <span style="color: black;font-size:30px;cursor:pointer;margin-right: 30px;" onclick="openNav()">&#9776; </span>
     </div>
   </nav>
-   
+
   <div class="back" id="back">
-    <div class="batch"><h4>BATCHES START FROM 15TH JAN</h4></div>
     <h1>Empowering Students to Achieve <br>Excellence</h1>
     <h4>Discover a world of academic excellence and personal growth at Aligarian's Visionary Classes.
 
@@ -375,6 +383,7 @@
   </div>
 
 
+  
   <div class="home-footer">
     <div class="box1"></div>
     <h1>Aligarian's Visionary Classes</h1>
